--- a/src/components/HomeFooter/HomeFooter.css
+++ b/src/components/HomeFooter/HomeFooter.css
@@ -7,11 +7,15 @@
   font-family: sans-serif;
 }
 
-.kwg-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 16px;
+.kwg-container .kwg-logo a {
+  text-decoration: none;
+}
+
+.kwg-container .kwg-logo h3  {
+    color: #fff;
+    font-weight: bold;
+    margin: 0;
+    font-family: emoji;
 }
 
 .age-badge {
