--- a/src/pages/wingo/game.css
+++ b/src/pages/wingo/game.css
@@ -22,7 +22,7 @@
   background: linear-gradient(to bottom, #ffc36a, #fff38a);
   border-radius: 20px;
   padding: 15px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 .wallet-balance {
   display: flex;
@@ -255,10 +255,10 @@
   padding: 20px;
 }
 
-.game-title {
+.win-go-info {
   text-align: center;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 12px;
+  font-weight: 700;
   margin-bottom: 20px;
 }
 
