added model for small and big

--- a/src/pages/wingo/game.css
+++ b/src/pages/wingo/game.css
@@ -254,7 +254,7 @@
 .game-board {
   padding: 20px;
 }
-
+/* .win-go-info se ham win go and how to play ke niche wala part manage krenege */
 .win-go-info {
   text-align: center;
   font-size: 12px;
