--- a/src/pages/wingo/game.css
+++ b/src/pages/wingo/game.css
@@ -472,8 +472,10 @@
   overflow: hidden;
 }
 
-.modal-header h3 {
-  margin-bottom: 10px;
+.small-modal-header h3 {
+  padding: 16px;
+  color: white;
+  text-align: center;
 }
 
 .bet-selection {
@@ -481,7 +483,24 @@
   color: #333;
   padding: 10px 20px;
   border-radius: 20px;
-  margin: 0 20px;
+  margin: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  /* color: #fff; */
+  text-transform: capitalize;
+  opacity: 0.9;
+}
+.selection-text{
+  background: white;
+  color: #333;
+  padding: 10px 20px;
+  border-radius: 20px;
+  margin: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  /* color: #fff; */
+  text-transform: capitalize;
+  opacity: 0.9;
 }
 
 .modal-content {
@@ -954,9 +973,8 @@
   object-fit: contain;
 }
 /* history css ended */
-
 /* bet panel change color dynamically css here */
-.modal-header {
+.modal-header h3{
   padding: 12px 20px;
   border-radius: 10px 10px 0 0;
   color: white;
@@ -1158,3 +1176,57 @@
   background-color: #2ecc71;
   color: white;
 }
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* ye dono me green red and violet and jo small and big ka popup hai uske liye */
+
+.modal-header-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 12px;
+  padding-bottom: 1rem;
+}
+
+.modal-header-1 h3 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+}
+
+/* .bet-selection {
+  margin-top: 6px;
+  font-size: 14px;
+  color: white;
+  font-weight: 500;
+} */
+.small-modal-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 12px;
+  padding-bottom: 1rem;
+}
+
+.small-modal-1 h3 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+}
+
+.selection-2 {
+  margin-top: 8px;
+  padding: 6px 14px;
+  background-color: white;
+  color: #000;
+  font-weight: 600;
+  border-radius: 20px;
+  font-size: 14px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+}
+
