--- a/src/pages/wingo/game.css
+++ b/src/pages/wingo/game.css
@@ -147,6 +147,7 @@
   cursor: pointer;
   margin-bottom: 4px;
   font-weight: 400;
+  border: .1px solid #8f5206;
 }
 .game-title {
   font-weight: 700;
