chnages more styling

--- a/src/pages/wingo/game.css
+++ b/src/pages/wingo/game.css
@@ -45,6 +45,7 @@
   display: flex;
   gap: 15px;
 }
+/* yaha se withdraw and deposit ka css Start hai */
 .withdraw-1,
 .deposit-2 {
   display: flex;
@@ -66,15 +67,14 @@
 .deposit-2 {
   background: linear-gradient(to bottom, #ffc36a, #fff38a);
   color: #8f5206;
-   border:  solid #8f5206
-
+  border:  solid #8f5206;
 }
 .withdraw-1:hover,
 .deposit-2:hover {
   transform: translateY(-2px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
-
+/* yaha se withdraw and deposit ka css end */
 /* part 2 */
 .game-nav {
   height: 5.5rem;
