--- a/src/pages/WithdrawHistory/withdrawHistory.css
+++ b/src/pages/WithdrawHistory/withdrawHistory.css
@@ -1,16 +1,16 @@
-.deposit-history-container {
+.withdraw-history-container {
   padding: 10px;
   color: white;
   margin-top: 1rem;
 }
 
-.deposit-history-container .deposit-history-card {
+.withdraw-history-container .withdraw-history-card {
   overflow: hidden;
   background-color: #2d1974;
   margin-bottom: 15px;
 }
 
-.deposit-history-container .deposit-history-header {
+.withdraw-history-container .withdraw-history-header {
   background-image: linear-gradient(to right, #5f51d6 0%, #a251d8 100%);
   display: flex;
   justify-content: space-between;
@@ -18,29 +18,29 @@
   padding: 10px 15px;
 }
 
-.deposit-history-container .deposit-history-btn {
+.withdraw-history-container .withdraw-history-btn {
   background-color: #20d289;
   padding: 5px 12px;
   border-radius: 5px;
   font-size: 12px;
 }
 
-.deposit-history-container .deposit-history-status {
+.withdraw-history-container .withdraw-history-status {
   font-size: 12px;
 }
 
-.deposit-history-container .deposit-history-info {
+.withdraw-history-container .withdraw-history-info {
   padding: 10px;
 }
 
-.deposit-history-container .deposit-history-row {
+.withdraw-history-container .withdraw-history-row {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
   font-size: 12px;
 }
 
-.deposit-history-container .order-no {
+.withdraw-history-container .order-no {
   display: flex;
   align-items: center;
   gap: 6px;
