profile all page

--- a/src/pages/DepositHistory/DepositHistory.css
+++ b/src/pages/DepositHistory/DepositHistory.css
@@ -8,6 +8,8 @@
   overflow: hidden;
   background-color: #2d1974;
   margin-bottom: 15px;
+    border-radius: 5px;
+
 }
 
 .deposit-history-container .deposit-history-header {
