--- a/src/pages/K3Game/K3DiceGame.css
+++ b/src/pages/K3Game/K3DiceGame.css
@@ -179,7 +179,7 @@
 
 .ball-tab-select {
   flex: 1;
-  padding: 10px;
+  padding: 7px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   text-align: center;
@@ -337,7 +337,7 @@
 .k3-tab3-title {
   font-size: 14px;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -375,10 +375,112 @@
 
 .k3-tab3-any-box {
   background-color: #fb9494;
-  color: #3e1f1f;
-  padding: 15px 10px;
+  color: #fff;
+  padding: 10px 0px;
   border-radius: 8px;
-  font-weight: bold;
   text-align: center;
-  font-size: 15px;
+  font-size: 14px;
+}
+
+.k3-dice-game-section .k3-gameHistory-myHistory-btn-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.k3-gameHistory-myHistory-btn-section .k3-gameHistory-btn,
+.k3-gameHistory-myHistory-btn-section .k3-myHistory-btn {
+  padding: 8px 10px;
+  border-radius: 5px;
+  border: none;
+  background: #3c2d98;
+  color: gray;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.k3-gameHistory-myHistory-btn-section .k3-gameHistory-btn.active,
+.k3-gameHistory-myHistory-btn-section .k3-myHistory-btn.active {
+  background: linear-gradient(to bottom, #ffc36a, #fff38a);
+  color: #5a3500;
+}
+
+.k3-gameHistory-table,
+.k3-myHistory-placeholder {
+  width: 100%;
+  color: white;
+}
+
+.k3-gameHistory-tab-row {
+  display: flex;
+  padding: 10px 0px;
+  align-items: center;
+  justify-content: space-around;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background: #6550e6;
+  font-size: 14px;
+}
+
+.k3-gameHistory-row {
+  padding: 7px 0px;
+  font-size: 12px;
+  /* font-weight: bold; */
+  color: #e0d0ff;
+  background: #3c2d98;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 5px;
+  border-bottom: 1px solid #6550e6;
+}
+
+.k3-dice-images {
+  display: flex;
+  gap: 6px;
+  align-items: center;
+}
+
+.k3-dice-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.k3-gameHistory-myHistory-btn-tab-data .k3-myHistory-placeholder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+  background: #3c2d98;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+  border-bottom: 1px solid gray;
+}
+
+.k3-myHistory-placeholder .game-history-number {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.game-history-number .game-history-status {
+  all: unset;
+  background: white;
+  color: red;
+  border-radius: 5rem;
+  padding: 2px 10px;
+  font-size: 12px;
+}
+
+.k3-myHistory-placeholder .date-and-time-history {
+  display: flex;
+  gap: 7px;
+  color: lightgray;
 }
